@@ -60,3 +60,11 @@ HORAS TRABALHADAS: 3h
 - correcao do algoritmo de ordenacao de feeds
 
 HORAS TRABALHADAS: 4h
+
+==========
+10/06/2009
+==========
+
+- inclusao de ordenacao no queue (sortable)
+
+HORAS TRABALHADAS: 2h
